Thu Sep 21 08:46:43 BST 2006 (njh)
----------------------------------
  * clamav-milter:	Be more specific about the format of the whitelist file

Wed Sep 20 14:03:49 BST 2006 (trog)
-----------------------------------
  * libclamav/unrar/unrar.c, unrarppm.c: portability changes

Wed Sep 20 11:26:11 BST 2006 (trog)
-----------------------------------
  * libclamav/unrar/unrar.c, unrar.h, unrarppm.c, unrarvm.c: Update to align
			with current RAR version.

Wed Sep 20 11:22:56 BST 2006 (njh)
----------------------------------
 * libclamav:	Removed some multiple calls to blobClose() and added one
			byte to arrays which other libraries may have offset
			by one issues with

Mon Sep 18 14:41:10 BST 2006 (njh)
----------------------------------
 * contrib/Windows/Projects/clamAV/libclamav:	Fixed support for 64 bit in
		the opendir code.
		Added handler for more than one mmap area.
		Patches from Mark Pizzolato

Sun Sep 17 10:41:24 BST 2006 (njh)
----------------------------------
  * docs:	Updated to latest version of the Phish Signatures documentation

Sat Sep 16 17:46:49 CEST 2006 (acab)
------------------------------------
  * phishing: fixed string truncation, crashes and updated relevant
		documentation (patch from Edvin)

Sat Sep 16 14:30:29 CEST 2006 (acab)
------------------------------------
  * libclamav/petite.h: fixed inconsistent function declaration.
		(thanks njh!)

Sat Sep 16 10:54:30 BST 2006 (njh)
----------------------------------
  * libclamav/message.c:	Not all binhex messages were being decoded
			in experimental mode

Fri Sep 15 17:28:24 BST 2006 (njh)
----------------------------------
  * libclamav/phishcheck.c:	Better way to find length of data to be
		scanned in str_strip() (reported by Edvin)

Fri Sep 15 00:52:48 CEST 2006 (tk)
----------------------------------
  * freshclam: fix compilation error on systems without SO_ERROR defined,
	       patch from Everton Marques <everton.marques*gmail.com>

Fri Sep 15 00:42:27 CEST 2006 (tk)